# HydraAgent_public

./: .env.example  .gitignore  MANIFEST.in  NOTICE.md  PROVENANCE.md  QUICKSTART.md  README.md  SECURITY.md  constraints.txt  pyproject.toml
.github/scripts/: ip-topology-scan.sh
.github/workflows/: ci.yml
.hydraAgent/policies/: danger-gates.yaml  trust-tiers.yaml
.hydraAgent/skills/: index.yaml
.hydraAgent/tools/: filesystem.yaml  registry.yaml  shell.yaml  skill-library.yaml  subagents.yaml  system.yaml  web.yaml
.hydraAgent/ux/: response-contracts.yaml
core/: config.py
docs/: hydra-watch-design.md  one-surface-launch-design.md
engineering-grounding/: README.md
engineering-grounding/principles/: agentic_epistemics_anti_coolaid.md  cs_fundamentals_algorithms.md  human_factors_ux.md  performance_systems_engineering.md  reliability_operations.md  security_cyber.md  software_design_architecture.md
gateways/telegram/: fakes.py  gate.py  live.py  operator.py
gateways/tui/: __main__.py  auth_commands.py  elite.py  hydra_app.py
hydra/: __main__.py  aci.py  agentic_roles.yaml  apply_patch.py  audit.py  autonomous_mission.py  autonomous_mission_parallel.py  autonomy.py  branding.py  capability_cards.py  capability_truth.py  channel_trust.py  chat_budget.py  chat_intents.py  cluster_lessons.py  codex_client.py  complexity_classifier.py  container_sandbox.py  context_engine.py  context_engine_v2.py  continuation.py  conversation_eval.py  declarative_runtime.py  discord_listener_runtime.py  doctor.py  domain_packs.py  edit_checkpoints.py  emergency_fallback.py  environment.py  evaluator_optimizer.py  event_log.py  exec_backend.py  failure_clusters.py  file_lock.py  friction.py  gateway_config.py  go_bridge.py  gpu_lease.py  guardrails.py  hooks.py  (+150 more)
hydra/backends/: README.md  __init__.py  base.py  docker.py  modal.py  test_docker_backend_engine.py
hydra/cli/: __init__.py  cmd_ask.py  cmd_chat.py  cmd_chat_support.py  cmd_code.py  cmd_doctor.py  cmd_execution.py  cmd_input.py  cmd_memory.py  cmd_mission.py  cmd_ops.py  cmd_runtime.py  cmd_setup.py  cmd_undo.py  cmd_update.py  cmd_watch.py  cmd_workbench.py  tool_binding.py
hydra/schemes/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  index.yaml
hydra/schemes/bundles/: eval-harness.md
hydra/schemes/bundles/ci-cd/: SKILL.md
hydra/schemes/bundles/ci-cd/skills/gha-matrix-build/: SKILL.md
hydra/schemes/bundles/code-review/: SKILL.md
hydra/schemes/bundles/code-review/create-comprehensive-security/: SKILL.md
hydra/schemes/bundles/code-review/skills/sec-scan-dependencies/: SKILL.md
hydra/schemes/bundles/document-processing/: SKILL.md
hydra/schemes/bundles/document-processing/skills/pdf-extract-tables/: SKILL.md
hydra/schemes/bundles/research/: SKILL.md
hydra/schemes/bundles/research/skills/deep-research-synthesis/: SKILL.md
hydra/schemes/bundles/security/: SKILL.md
hydra/schemes/bundles/security/skills/owasp-top-10-scan/: SKILL.md
hydra/schemes/bundles/software-design/: SKILL.md
hydra/schemes/bundles/software-design/skills/agent-architecture-design/: SKILL.md
hydra/schemes/bundles/software-design/skills/system-architecture-design/: SKILL.md
hydra/schemes/bundles/template/: SKILL.md
hydra/schemes/bundles/web-testing/: SKILL.md
hydra/schemes/bundles/web-testing/skills/playwright-screenshot/: SKILL.md
skills/: bash.py  browse_agent.py  browser.py  fs_edit.py  fs_read.py  fs_write.py  git_diff.py  glob_files.py  grep_files.py  http_fetch.py  index.yaml  list_directory.py  rapidapi_client.py  system_stats.py  todo.py  web_extract.py
skills/subagent_driven_development/: SKILL.md
skills/systematic_debugging/: SKILL.md
skills/task_planner/: SKILL.md
skills/understanding/: SKILL.md
