[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraagent"
version = "0.1.0"
description = "Hydra — an autonomous coding and ops agent CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "jsonschema>=4.0",
  "prompt_toolkit>=3.0",
  "psutil>=5.9",
  "pyfiglet>=1.0",
  "qrcode>=7.4",
  "rich>=13.0",
  "textual>=0.80",
]

[project.optional-dependencies]
# Persistent vector memory (hydra/unified_memory.py). The `sqlite-vec` wheel
# provides the vec0 extension; PEP-668 environments that cannot install it
# system-wide fall back to the pinned vendored vec0.so shipped at
# hydra/_vendor/sqlite_vec/vec0.so (resolved automatically by
# hydra.unified_memory.resolve_vec0_extension, override via HYDRA_VEC0_PATH).
memory = [
  "sqlite-vec>=0.1.9",
]
# Optional GPU telemetry backend.
#   pynvml: GPU telemetry in hydra/host_telemetry.py (optional — skipped when absent).
gateway = [
  "pynvml>=11.5",
]
# Browser (skills/browser.py + skills/browse_agent.py). HydraAgent's OWN headless
# browser: Playwright driving a system Chrome via executable_path (resolved by
# skills.browser.resolve_chrome, override via HYDRA_CHROME_PATH). Playwright's
# bundled Chromium does not build for very new OSes, so an existing
# Chrome-for-Testing binary on the host is reused instead.
browser = [
  "playwright>=1.49",
]

[project.scripts]
hydra = "hydra.__main__:main"

[tool.setuptools.packages.find]
include = ["hydra*", "gateways*", "skills*", "core*"]

[tool.setuptools.package-data]
# Pinned vec0 extension for the unified memory store (PEP-668 fallback).
"hydra" = ["_vendor/sqlite_vec/vec0.so"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = [
  ".git",
  ".pytest_cache",
  "__pycache__",
  "worktrees",
]
markers = [
  "smoke: real bounded end-to-end smoke (opt-in via env, may hit external hosts)",
  "network: test makes a real network call (skipped when host unreachable)",
  "live: test hits a live local model/service (e.g. ollama on localhost)",
]
